--- a/services/sequencer/package.json
+++ b/services/sequencer/package.json
@@ -1,6 +1,7 @@
 {
     "name": "sequencer",
     "dependencies": {
-        "fastify": "^4.5.2"
+        "fastify": "^4.5.2",
+        "nodemon": "^2.0.19"
     }
 }
